# r2-workspace-kotlin

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lcp/: CMakeLists.txt  build.gradle
lcp/src/main/: AndroidManifest.xml
lcp/src/main/cpp/: lcp.h
lcp/src/main/res/values/: strings.xml
liblcp/: build.gradle
r2-lcp-kotlin/: CMakeLists.txt  build.gradle
r2-lcp-kotlin/src/androidTest/java/org/readium/r2/lcp/: ExampleInstrumentedTest.java
r2-lcp-kotlin/src/main/: AndroidManifest.xml
r2-lcp-kotlin/src/main/cpp/: lcp.cpp
r2-lcp-kotlin/src/main/cpp/lcp/: CA.h  CryptoUtils.cpp  CryptoUtils.h  DRMContext.cpp  DRMContext.h  DRMService.cpp  DateUtils.cpp  DateUtils.h  LicenseCanonicalizer.cpp  LicenseChecker.cpp  LicenseChecker.h  LicenseParser.cpp  json11.cpp
r2-lcp-kotlin/src/main/java/org/readium/r2/lcp/: DRMContext.kt  DRMError.kt  DRMException.kt  Lcp.kt  LcpResult.kt
r2-lcp-kotlin/src/main/res/values/: strings.xml
r2-testapp-kotlin/: build.gradle
r2lcp/: build.gradle
r2navigator/: build.gradle
r2navigator/src/main/: AndroidManifest.xml
r2navigator/src/main/res/layout/: activity_pref.xml  activity_r2_epub.xml  activity_r2_epub2.xml  activity_settings.xml  activity_toc.xml  content_r2_epub.xml  (+4 more)
r2shared/: build.gradle
r2shared/src/main/: AndroidManifest.xml
r2shared/src/main/java/: Metadata.kt  Publication.kt
r2streamer/: build.gradle
r2streamer/src/main/: AndroidManifest.xml
testapp/: build.gradle
testapp/src/main/: AndroidManifest.xml
(+164 files in other folders)
